...
            "value" : "Image"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "图片"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "圖片"
...
            "state" : "translated",
            "value" : "用戶端與伺服器版本不一致，暫時無法修改聯絡人。"
          }
        }
      }
    },
    "demo.imessage.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "دردشة بنمط iMessage"
...
            "value" : "Photos"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
...
            "state" : "translated",
            "value" : "iMessage"
          }
        }
      }
    },
    "imessage.composer.send" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إرسال"
...
    "imessage.preview.live.bounce" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ارتداد"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bounce"
...
            "value" : "Turn Off Live"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "关闭实况"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "關閉原況"
...
            "state" : "translated",
            "value" : "暫停"
          }
        }
      }
    },
    "imessage.preview.play" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تشغيل"
...
            "state" : "translated",
            "value" : "上一個附件"
          }
        }
      }
    },
    "imessage.preview.progress" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "موضع التشغيل"
...
